# Realistic-Loan-Approval

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  setup.py  template.py
Streamlit_app/: app.py
Streamlit_app/pages/: 1_Loan_Prediction.py  2_Data_Analysis.py
api/: main.py  requirements.txt
api/src/: train.py
backend/: requirements.txt
backend/config/: mlflow.yaml
backend/models/: loan_model.pkl  model.pkl
backend/src/: predict.py
frontend/: Dockerfile  requirements.txt
frontend/Streamlit_app/pages/: 1_Loan_Prediction.py
models/: scaler.pkl
notebooks/: 01_exploration.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/470675383823234380/: meta.yaml
notebooks/mlruns/470675383823234380/70260c2f09204bd7931b860a1ba79667/: meta.yaml
notebooks/mlruns/470675383823234380/70260c2f09204bd7931b860a1ba79667/artifacts/: classification_report.txt
notebooks/mlruns/470675383823234380/70260c2f09204bd7931b860a1ba79667/metrics/: best_auc  logistic_regression_accuracy  logistic_regression_auc  logistic_regression_f1  random_forest_accuracy  (+11 more)
src/: data_preprocessing.py  predict.py  train.py
src/schemas/: input_schema.py
src/utils/: exception.py  logger.py
tests/: conftest.py  test_api.py  test_data_validation.py  test_feature_engineering.py  test_prediction_pipeline.py  test_preprocessing.py  test_training_pipeline.py
(+25 files in other folders)
