[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loan_approval"
version = "0.1.0"
description = "Realistic Loan Approval ML Pipeline"
authors = [{ name="Laxman Sahane"}]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "xgboost",
    "pyyaml",
    "joblib"
]